--- a/vignettes/Development/Quality control/Publication/Molecular_verification_acid.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular_verification_acid.Rmd
@@ -39,6 +39,7 @@ source("baseScripts/initWorld_onlyMolec.R")
 
 World$substance <- substance
 ```
+
 The SBoo world is initialized for a substance. In this case, that
 substance is `r World$fetchData("Substance")`, which is of class:
 `r World$fetchData("ChemClass")`.
@@ -68,6 +69,7 @@ between excel and R, and not the result of mistakes in calculations or
 input values.
 
 # Step 1. Compare SBoo (incl. updates) to spreadsheet
+
 ```{r data xlsx and R, echo=FALSE, warning=FALSE}
 #Comparing K's from R model to K's from excel model
 library(openxlsx)
@@ -161,20 +163,33 @@ mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)
 ```
 
 ## preliminary matrix check
-In the chunk below we check if our matrix is as large as we expect it to be. 
 
-i) Matrix 
-The SimpleBox model operates over 5 scales, 12 subcompartments and 4 different speciations. For molecules, this is already filtered to only include one species: Unbound. As such, we would expect our matrix to have 5 * 12 * 1 = 60 rows. However, some exceptions exist within our SB world: 
+In the chunk below we check if our matrix is as large as we expect it to
+be.
 
-- The Regional and Continental scale do now have a deepocean layer (w3), reducing the matrix by 2 * 1  = 2 rows. 
-- The Global Scales (Arctic, Moderate, Tropic) only have one type of soil instead of 3, reducing the matrix by 3 * 2  = 6 rows.
-- The Global Scales (Arctic, Moderate, Tropic) only have one type of sediment instead of 3, reducing the matrix by 3 * 2  = 6 rows.
-- The Global Scales (Arctic, Moderate, Tropic) only have one type of water instead of 3, reducing the matrix by 3 * 2  = 6 rows.
-- Cloudwater (compartment) does not have any values, reducing our matrix by 5 * 1 * 1 = 5 rows. 
+i)  Matrix The SimpleBox model operates over 5 scales, 12
+    subcompartments and 4 different speciations. For molecules, this is
+    already filtered to only include one species: Unbound. As such, we
+    would expect our matrix to have 5 \* 12 \* 1 = 60 rows. However,
+    some exceptions exist within our SB world:
 
-With these exceptions, we expect our matrix to be 60- 25 = 35 rows. This script will stop running if this is not the case. 
+-   The Regional and Continental scale do now have a deepocean layer
+    (w3), reducing the matrix by 2 \* 1 = 2 rows.
+-   The Global Scales (Arctic, Moderate, Tropic) only have one type of
+    soil instead of 3, reducing the matrix by 3 \* 2 = 6 rows.
+-   The Global Scales (Arctic, Moderate, Tropic) only have one type of
+    sediment instead of 3, reducing the matrix by 3 \* 2 = 6 rows.
+-   The Global Scales (Arctic, Moderate, Tropic) only have one type of
+    water instead of 3, reducing the matrix by 3 \* 2 = 6 rows.
+-   Cloudwater (compartment) does not have any values, reducing our
+    matrix by 5 \* 1 \* 1 = 5 rows.
 
-ii) We expect all processes to be included in Processes4SpeciesTp.csv to also be calculated. Therefore, we compare the calculated unique processes with the processes defined in this csv. 
+With these exceptions, we expect our matrix to be 60- 25 = 35 rows. This
+script will stop running if this is not the case.
+
+ii) We expect all processes to be included in Processes4SpeciesTp.csv to
+    also be calculated. Therefore, we compare the calculated unique
+    processes with the processes defined in this csv.
 
 ```{r check if matrix is 155x155, include=TRUE, echo=FALSE, warning=FALSE}
 dims <- dim(diagonal_R)
@@ -219,25 +234,28 @@ if (!setequal(Functions, world_processes)) {
 ```
 
 ## Compare k's
-When comparing k's between R and excel, the goal is that the relative difference is less
-than 1 percentile for each k. The reason is that smaller differences often are 
-a result of differences in rounding values between excel and R, and not the result
-of mistakes in calculations or different input values. In this vignette two types of 
-k's are compared: diagonal k's and from-to k's.
 
-At the time of this verification, some improvements were already made in the R 
-version versus the excel version. This meant that some k's differ between R and
-excel, but not because the calculations or input values are wrong. In order to 
-still be able to compare the two versions, the 'Test' variable was created. This
-variable is a boolean that can be used to calculate some processes in R the same 
-way as in excel for the verification without removing the improvements that are 
-made. When this test variable was used and why will be explained below. 
+When comparing k's between R and excel, the goal is that the relative
+difference is less than 1 percentile for each k. The reason is that
+smaller differences often are a result of differences in rounding values
+between excel and R, and not the result of mistakes in calculations or
+different input values. In this vignette two types of k's are compared:
+diagonal k's and from-to k's.
+
+At the time of this verification, some improvements were already made in
+the R version versus the excel version. This meant that some k's differ
+between R and excel, but not because the calculations or input values
+are wrong. In order to still be able to compare the two versions, the
+'Test' variable was created. This variable is a boolean that can be used
+to calculate some processes in R the same way as in excel for the
+verification without removing the improvements that are made. When this
+test variable was used and why will be explained below.
 
 ### Diagonal k's
 
-Diagonal k's are k's that are on the diagonal of the k matrix. They are calculated
-as the sum of all the k's leaving the subcompartment plus the sum of the removal process
-k's (i.e. degradation or burial). 
+Diagonal k's are k's that are on the diagonal of the k matrix. They are
+calculated as the sum of all the k's leaving the subcompartment plus the
+sum of the removal process k's (i.e. degradation or burial).
 
 ```{r PlotsDiagonalk_1,fig.cap = "Figure 1: Relative differences sum of from-k's between R and Spreadsheet implementation of SimpleBox (Test=FALSE)", echo=FALSE, warning=FALSE}
 
@@ -272,9 +290,10 @@ ggplot(merged_diagonal, aes(x = from, y = reldif)) +
   labs(x = "from", y = "Relative diff")
 ```
 
-Figures 1 and 2 above show the absolute and relative differences in diagonal k's between R and excel. 
-As can be seen in Figure 2, relative differences larger than 1 percentile are in the lake, freshwater and
-sediment subcompartments. 
+Figures 1 and 2 above show the absolute and relative differences in
+diagonal k's between R and excel. As can be seen in Figure 2, relative
+differences larger than 1 percentile are in the lake, freshwater and
+sediment subcompartments.
 
 ```{r filter large diagonal differences, include=FALSE, echo=FALSE}
 diagonal_diffs <- merged_diagonal |>
@@ -285,31 +304,35 @@ diagonal_diffs <- merged_diagonal |>
 
 #### Lake difference
 
-The relative difference in lake removal rate is caused by lake sedimentation
-being included in R but not in excel. To make an accurate comparison between R 
-and excel, the Test variable was used to exclude flows from lake to lakesediment in 
-the processes k_Sedimentation and k_Adsorption.
+The relative difference in lake removal rate is caused by lake
+sedimentation being included in R but not in excel. To make an accurate
+comparison between R and excel, the Test variable was used to exclude
+flows from lake to lakesediment in the processes k_Sedimentation and
+k_Adsorption.
 
 #### Settling velocity
 
-The difference in the diagonal k's for sedimentation comes from a difference in k's for the 
-sedimentation and resuspension processes. 
+The difference in the diagonal k's for sedimentation comes from a
+difference in k's for the sedimentation and resuspension processes.
 
 This is caused by the use of different formulas to calculate settling
-velocity between excel and R. In excel, settling velocity is always calculated as: 
+velocity between excel and R. In excel, settling velocity is always
+calculated as:
 
 `SetVel <- 2.5/(24*3600)`
 
-While in R, an improved version of this formula is used: 
+While in R, an improved version of this formula is used:
 
 `SetVel <- 2*(radius^2*(rhoParticle-rhoWater)*GN) / (9*DynViscWaterStandard)`
 
-Using the Test variable, the settling velocity formula is temporarily changed to 
-the formula used in excel for the resuspension ans sedimentation processes (K_resuspension
-and k_Sedimentation). This solves the differences in diagonal k's related to 
-resuspension or sedimentation.
+Using the Test variable, the settling velocity formula is temporarily
+changed to the formula used in excel for the resuspension ans
+sedimentation processes (K_resuspension and k_Sedimentation). This
+solves the differences in diagonal k's related to resuspension or
+sedimentation.
 
 #### Degradation
+
 For some substances, the bulk standard degradation rate constant for
 air/water/soil/sediment (kdeg) has an input value, while for other
 substances this value is calculated. When an input value is available,
@@ -345,7 +368,8 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   )
 ```
 
-We can filter out the exact k's that have a relative difference larger than 0.1%:
+We can filter out the exact k's that have a relative difference larger
+than 0.1%:
 
 ```{r TableDifferences, echo=FALSE, message=FALSE, warning=FALSE, paged.print=TRUE}
 mergedkaas |>
@@ -355,12 +379,16 @@ mergedkaas |>
 ```
 
 #### Sedimentation and resuspension
-As can be seen in Figure 2 and the table above, the k's that have a relative difference larger
-than 0.1% go from water to sediment or from sediment to water. Changing 
-the formula for calculating settling velocity when Test = TRUE for the sedimentation
-and resuspension processes (explained above under 'Settling velocity') also solves these differences.
+
+As can be seen in Figure 2 and the table above, the k's that have a
+relative difference larger than 0.1% go from water to sediment or from
+sediment to water. Changing the formula for calculating settling
+velocity when Test = TRUE for the sedimentation and resuspension
+processes (explained above under 'Settling velocity') also solves these
+differences.
 
 ### Steadystate mass
+
 ```{r PlotSteadyState_1, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 3: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=FALSE)"}
 
 library(stringi)
@@ -414,12 +442,16 @@ ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   custom_theme()
 ```
 
-The differences in k's drives the model output: the steady state mass. So a final check is to see how much the steady state masses differ between both implementations of SimpleBox (Figure 3). From this it is clear that there  are differences up to `r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=3)*100`%.
+The differences in k's drives the model output: the steady state mass.
+So a final check is to see how much the steady state masses differ
+between both implementations of SimpleBox (Figure 3). From this it is
+clear that there are differences up to
+`r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=3)*100`%.
 
 # Step 2. Compare SBoo and Spreadsheet excluding updates (Test=TRUE)
 
-Now the value for the Test variable can be changed to TRUE, and the difference
-in k's between excel and R can be tested again: 
+Now the value for the Test variable can be changed to TRUE, and the
+difference in k's between excel and R can be tested again:
 
 ```{r comparison_2, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
 World$SetConst(Test = "TRUE")
@@ -519,7 +551,6 @@ ggplot(merged_diagonal, aes(x = from, y = reldif)) +
 
 ```
 
-
 ```{r PlotFromTok_2, echo=FALSE, warning=FALSE, message=FALSE, fig.cap="Figure 5: Relative differences from-to k's between R and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
 ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) + 
   geom_point() +
@@ -532,13 +563,12 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   )
 ```
 
-
-As can be seen in Figures 4 and 5, the temporary changes made using the Test variable 
-solved the large differences in k's between R and excel for both the diagonal and the 
-from-to k's. All relative differences are now smaller than 1 percentile. 
+As can be seen in Figures 4 and 5, the temporary changes made using the
+Test variable solved the large differences in k's between R and excel
+for both the diagonal and the from-to k's. All relative differences are
+now smaller than 1 percentile.
 
 ## Steadystate mass
-
 
 ```{r PlotSteadyState_2, include= TRUE, echo= FALSE, warning=FALSE, fig.cap="Figure 6: Relative differences in steady state mass per compartment between R (SB1solve) and Spreadsheet implementation of SimpleBox (Test=TRUE)"}
 
@@ -593,4 +623,48 @@ ggplot(merged_SS_SB1, aes (x = Abbr, y = reldiff)) +
   custom_theme()
 ```
 
-To test if the small differences (<0.1%) in first order rate constants is negligible (Figures 4 and 5), the steady state masses should also not differ by more than 0.1% between the R and Spreadsheet implementations of SimpleBox. This is indeed the case (Figure 6) as the max difference in now only `r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=5)*100`%. This proves that the port of SimpleBox to R is successful in reproducing the results from the original spreadsheet implementation for chemicals of class `r World$fetchData("ChemClass")`.
+To test if the small differences (\<0.1%) in first order rate constants
+is negligible (Figures 4 and 5), the steady state masses should also not
+differ by more than 0.1% between the R and Spreadsheet implementations
+of SimpleBox. This is indeed the case (Figure 6) as the max difference
+in now only
+`r merged_SS_SB1$reldiff |> abs() |> max() |> round(digits=5)*100`%.
+This proves that the port of SimpleBox to R is successful in reproducing
+the results from the original spreadsheet implementation for chemicals
+of class `r World$fetchData("ChemClass")`.
+
+# Step 3. Verify dynamic solver
+
+The dynamic solver can use time explicit emissions and provide masses or
+concentration in time. This shows the increase in mass in each
+compartment in time based on a specified emission, see
+[here](vignettes/10.0-Solver-use.md "Solver documentation") for more
+details. Here we verify that with constant emission in time the steady
+state mass is approached.
+
+```{r}
+
+emissions <- 
+  # create emission scenario in time:
+  data.frame(Emis = c(10000,10000,0,0), # emission in kg/s
+             Time = c(0,9,10,20))  # years from start
+# apply emission scenario to intended species and compartments using hte Abbr:
+emissions <- merge(emissions, data.frame(Abbr = c("aRU", "s2RU", "w1RU")))
+
+# convert time to seconds
+emissions <- emissions |>
+  mutate(Emis = Emis,
+    Time = Time*(365.25*24*60*60)) |> ungroup()
+
+
+tmax <- max(emissions$Time) # set max solve time to last step in emission scenario
+nTIMES <- 1+max(emissions$Time)/(365.25*24*60*60) # Sets the time step for output, e.g. for 20 year scenario, add t0 is 21 nTimes
+
+# Initialize the dynamic solver
+World$NewSolver("DynamicSolver")
+World$Solve(emissions = emissions, tmax = tmax, nTIMES = nTIMES)
+solution <- World$Masses()
+emission <- World$Emissions()
+concentration <- World$Concentration()
+
+```
